--- a/meta/environment.yml
+++ b/meta/environment.yml
@@ -13,8 +13,10 @@ dependencies:
 - numpy=1.13.1=py36_0
 - openssl=1.0.2l=0
 - pip=9.0.1=py36_1
+- py=1.4.34=py36_0
 - pyparsing=2.2.0=py36_0
 - pyqt=5.6.0=py36_2
+- pytest=3.2.1=py36_0
 - python=3.6.2=0
 - python-dateutil=2.6.1=py36_0
 - pytz=2017.2=py36_0
